--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,17 +10,17 @@
       <%= f.email_field :email, class: "form-control" %>
       <%= f.label :password %>
       <%= f.password_field :password, class: "form-control" %>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
       <%= f.label :address %>
       <%= f.text_field :address, class: "form-control" %>
       <%= f.label :phone %>
       <%= f.text_field :phone, class: "form-control" %>
-      <%= f.radio_button :gender, "male", :checked => true, class: "form-control" %>
-      <%= label :gender, "Male" %>
-      <%= f.radio_button :gender, "female", class: "form-control" %>
-      <%= label :gender, "Female" %><br>
-      <%= f.label :avartar, "Image" %>
+      <%= f.radio_button :gender, t("users.edit.male"), :checked => true, class: "form-control" %>
+      <%= label :gender, t("users.edit.male") %>
+      <%= f.radio_button :gender, t("users.edit.female"), class: "form-control" %>
+      <%= label :gender, t("users.edit.female") %><br>
+      <%= f.label :avartar %>
       <%= f.file_field :avartar, class: "form-control" %>
       <%= f.submit t("static_pages.users.create_acc"), class: "btn btn-primary" %>
     <% end %>
