--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,6 +5,15 @@
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t("layouts.header.home"), root_path %></li>
         <li><%= link_to t("layouts.header.help"), help_path %></li>
+        <li class="dropdown">
+          <%= link_to "#", class: "dropdown-toggle", data: {toggle: :dropdown} do %><%= t("layouts.header.category") %><b class="caret"></b>
+          <% end %>
+          <ul class="dropdown-menu" role="menu">
+            <% Category.all.each do |category| %>
+              <li class="<%= "active" if params[:category] == category.title %>" ><%= link_to category.title, products_path(category: category.title), class: "link" %></li>
+            <% end %>
+          </ul>
+        </li>
         <% if logged_in? %>
           <li><%= link_to t("layouts.header.users"), users_path %></li>
           <li class="dropdown">
@@ -13,6 +22,7 @@
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.header.profile"), current_user %></li>
               <li><%= link_to t("layouts.header.setting"), edit_user_path(current_user) %></li>
+              <li><%= link_to t("layouts.header.add_book"), new_product_path %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("layouts.header.log_out"), logout_path, method: :delete %>
