--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -5,9 +5,9 @@
     <%= form_for(@user, url: password_reset_path(params[:id])) do |f| %>
       <%= render "shared/error_messages" %>
       <%= hidden_field_tag :email, @user.email %>
-      <%= f.label :password %>
+      <%= f.label t("form.password_label") %>
       <%= f.password_field :password, class: "form-control" %>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label t("form.password_confirmation_label") %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
       <%= f.submit t("password_reset.edit.up_pass"), class: "btn btn-primary" %>
     <% end %>
