--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -3,7 +3,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(:password_reset, url: password_resets_path) do |f| %>
-      <%= f.label :email %>
+      <%= f.label t("form.email_label") %>
       <%= f.email_field :email, class: "form-control" %>
       <%= f.submit t("password_reset.new.sub"), class: "btn btn-primary" %>
     <% end %>
