--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,7 +1,7 @@
 <% if @user.errors.any? %>
   <div id="error_explanation">
     <div class="alert alert-danger">
-      <%= t "shared.error.form_errors" %> <%= pluralize(@user.errors.count, "error") %>.
+      <%= t("shared.error.form_errors", count: @user.errors.count) %>
     </div>
     <ul>
     <% @user.errors.full_messages.each do |msg| %>
