--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -10,17 +10,17 @@
       <%= f.email_field :email, class: "form-control", :disabled => true %>
       <%= f.label :password %>
       <%= f.password_field :password, class: "form-control" %>
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation %>
       <%= f.password_field :password_confirmation, class: "form-control" %>
       <%= f.label :address %>
       <%= f.text_field :address, class: "form-control" %>
       <%= f.label :phone %>
       <%= f.text_field :phone, class: "form-control" %>
       <%= f.radio_button :gender, "male", :checked => true, class: "form-control" %>
-      <%= label :gender, "Male" %>
+      <%= label :gender, t("users.edit.male") %>
       <%= f.radio_button :gender, "female", class: "form-control" %>
-      <%= label :gender, "Female" %><br>
-      <%= f.label :avartar, "Image" %>
+      <%= label :gender, t("users.edit.female") %><br>
+      <%= f.label :avartar %>
       <%= f.file_field :avartar, class: "form-control", accept: "image/jpeg,image/gif,image/png" %>
       <%= image_tag @user.avartar.url if @user.avartar? %>
       <%= f.submit t("users.edit.save"), class: "btn btn-primary" %>
