--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,13 +6,13 @@
         <li><%= link_to t("layouts.header.home"), root_path %></li>
         <li><%= link_to t("layouts.header.help"), help_path %></li>
         <% if logged_in? %>
-          <li><%= link_to t("layouts.header.users"), "#" %></li>
+          <li><%= link_to t("layouts.header.users"), users_path %></li>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", data: {toggle: :dropdown} do %><%= t("layouts.header.account") %><b class="caret"></b>
             <% end %>
             <ul class="dropdown-menu">
               <li><%= link_to t("layouts.header.profile"), current_user %></li>
-              <li><%= link_to t("layouts.header.setting"), "#" %></li>
+              <li><%= link_to t("layouts.header.setting"), edit_user_path(current_user) %></li>
               <li class="divider"></li>
               <li>
                 <%= link_to t("layouts.header.log_out"), logout_path, method: :delete %>
