--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,13 +1,13 @@
 <footer class="footer">
   <small>
-    <%= t("layouts.footer.the") %> <a href="http://www.railstutorial.org/"><%= t("layouts.footer.book") %></a>
-    <%= t("layouts.footer.by") %> <a href="http://www.michaelhartl.com/"><%= ("layouts.footer.by_name") %></a>
+    <%= t "layouts.footer.the" %> <a href="http://www.railstutorial.org/"><%= t "layouts.footer.book" %></a>
+    <%= t "layouts.footer.by" %> <a href="http://www.michaelhartl.com/"><%= t "layouts.footer.by_name" %></a>
   </small>
   <nav>
     <ul>
       <li><%= link_to t("layouts.footer.about"), about_path %></li>
       <li><%= link_to t("layouts.footer.contact"), contact_path %></li>
-      <li><a href="http://news.railstutorial.org/"><%= t("layouts.footer.news") %></a></li>
+      <li><a href="http://news.railstutorial.org/"><%= t "layouts.footer.news" %></a></li>
     </ul>
   </nav>
 </footer>
