cart, add, edit, delete

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -46,6 +46,7 @@
         <% else %>
           <li><%= link_to t(".log_in"), login_path %></li>
         <% end %>
+        <li><%= link_to t("controller.carts.cart"), your_cart_path %></li>
       </ul>
     </nav>
   </div>
