delete_advance_categories

--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -3,7 +3,7 @@
     <th scope="row"><%= product.id %></th>
     <td><%= link_to product.productname, edit_admin_product_path(product.id) %></td>
     <td><%= product.category_title %></td>
-    <td><%= product.price %> $</td>
+    <td><%= t("product_price", price: product.price) %></td>
     <td><%= product.status %></td>
     <td>
       <%= link_to t("orders.index.details"), edit_admin_product_path(product.id), method: :get, class: "btn btn-primary btn-rounded btn-sm my-0" %>
