--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,13 +1,2 @@
 <h1><%= t "products.edit.edit_book" %></h1>
-<%= form_for [:admin, @category] do |f| %>
-  <%= render "shared/error_messages", object: f.object %>
-  <%= f.label :category %>
-  <%= f.collection_select :parent_id, Category.all, :id, :long_name, {:include_blank => "Parent"}, {:class=>"form-control"} %>
-  <%= f.label :title %>
-  <%= f.text_field :title, class: "form-control" %>
-  <%= f.label :catcontent %>
-  <%= f.text_area(:catcontent, size: "50x20") %>
-  <%= f.label :status %>
-  <%= f.select :status, options_for_select(Category.statuses.keys, @category.status), {}, {class: "form-control"} %>
-  <%= f.submit t("products.edit.sub"), class: "btn btn-primary" %>
-<% end %>
+<%= render "form" %>
