--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -16,7 +16,7 @@
   <%= f.label :image %>
   <%= f.file_field :image, class: "form-control" %>
   <%= f.label :productcontent %>
-  <%= f.text_area(:productcontent, size: "50x20") %>
+  <%= f.text_area(:productcontent, size: "#{Settings.size.col}x#{Settings.size.row}") %>
   <%= f.label :status %>
   <%= f.select :status, options_for_select(Product.statuses.keys, @product.status), {}, {class: "form-control"} %>
   <%= f.submit t("products.edit.sub"), class: "btn btn-primary" %>
