--- a/app/views/admin/products/_product.html.erb
+++ b/app/views/admin/products/_product.html.erb
@@ -2,7 +2,7 @@
   <tr>
     <th scope="row"><%= product.id %></th>
     <td><%= link_to product.productname, edit_admin_product_path(product.id) %></td>
-    <td><%= product.category.title %></td>
+    <td><%= product.category_title %></td>
     <td><%= product.price %> $</td>
     <td><%= product.status %></td>
     <td>
