--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -1,6 +1,6 @@
 <h1><%= t "products.edit.edit_book" %></h1>
 <%= form_for [:admin, @product] do |f| %>
-  <%= render "shared/error_messages_product" %>
+  <%= render "shared/error_messages", object: f.object %>
   <%= f.label :category %>
   <%= f.select :category_id, @categories, {}, {class: "form-control"} %>
   <%= f.label :productname %>
@@ -17,7 +17,7 @@
   <%= f.file_field :image, class: "form-control" %>
   <%= f.label :productcontent %>
   <%= f.text_area(:productcontent, size: "50x20") %>
- <%= f.label :status %>
-  <%= f.select(:status, options_for_select(Product.statuses.keys, @product.status), {}, {class: "form-control"}) %>
+  <%= f.label :status %>
+  <%= f.select :status, options_for_select(Product.statuses.keys, @product.status), {}, {class: "form-control"} %>
   <%= f.submit t("products.edit.sub"), class: "btn btn-primary" %>
 <% end %>
