--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -18,9 +18,15 @@
 
 <% if @cart %>
   <%= render partial: "cart", collection: @products, as: :item %>
+  <ul class="list-group" style="margin-top: 20px; width: 400px; text-align: center">
+    <li class="list-group-item list-group-item-success"><%= t "orders.index.total" %></li>
+    <li class="list-group-item list-group-item-info"><%= total %></li>
+  </ul>
 <% end %>
-
 <div style="margin-top: 20px;">
-  <%= link_to t("controller.carts.del"), delete_cart_path, method: :delete, class: "btn btn-danger" %>
   <%= link_to t("controller.carts.home"), root_path, class: "btn btn-warning" %>
+  <% if total > 0 %>
+    <%= link_to t("controller.carts.checkout"), checkout_path, class: "btn btn-success" %>
+    <%= link_to t("controller.carts.del"), delete_cart_path, method: :delete, class: "btn btn-danger" %>
+  <% end %>
 </div>
