--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,20 +1,28 @@
 <h1><%= t "admin.orders.index.list_product" %></h1>
 <div class="row">
-  <%= will_paginate @product %>
-    <table class="table table-striped table-responsive-md btn-table">
-      <thead>
-        <tr>
-          <th><%= t "admin.orders.index.id" %></th>
-          <th><%= t "admin.orders.index.productname" %></th>
-          <th><%= t "admin.orders.index.category" %></th>
-          <th><%= t "admin.orders.index.price" %></th>
-          <th><%= t "admin.orders.index.status" %></th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-         <%= render partial: "product", collection: @products %>
-      </tbody>
-    </table>
-  <%= will_paginate @product %>
+  <div class="col-md-6">
+    <h3><%= t "products.index.import_file" %></h3>
+    <%= form_tag import_admin_products_path, multipart: true do %>
+      <%= file_field_tag :file %>
+      <%= submit_tag t("products.index.import"), class: "btn btn-success" %>
+    <% end %>
+  </div>
+  <div class="col-md-6">
+    <%= will_paginate @product %>
+  </div>
+  <table class="table table-striped table-responsive-md btn-table">
+    <thead>
+      <tr>
+        <th><%= t "admin.orders.index.id" %></th>
+        <th><%= t "admin.orders.index.productname" %></th>
+        <th><%= t "admin.orders.index.category" %></th>
+        <th><%= t "admin.orders.index.price" %></th>
+        <th><%= t "admin.orders.index.status" %></th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+       <%= render partial: "product", collection: @products %>
+    </tbody>
+  </table>
 </div>
