show_history_order

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,3 +9,5 @@
     </section>
   </aside>
 </div>
+<h2><%= t "controller.products.purchase_history" %></h2>
+<%= render partial: "history_orders", collection: @products, as: :item %>
