--- a/app/views/admin/orders/edit.html.erb
+++ b/app/views/admin/orders/edit.html.erb
@@ -1,39 +1,46 @@
-<h1><%= t "orders.edit.order_detail" %></h1>
+<h1><%= t ".order_detail" %></h1>
 <hr>
 <div class="row">
-  <div class="col-md-3">
-    <%= form_for [:admin, @order] do |f| %>
-      <%= f.label :status %>
-      <%= f.select :status, options_for_select(Order.statuses.keys, @order.status), {}, {class: "form-control"} %>
-      <%= f.submit t("orders.edit.update"), class: "btn btn-success" %>
-    <% end %>
-    <br>
-    <ul class="list-group">
-      <li class="list-group-item active"><%= t "orders.edit.cus_info" %></li>
-      <li class="list-group-item"><%= t "orders.edit.name" %><%= @order.user_name %></li>
-      <li class="list-group-item"><%= t "orders.edit.email" %><%= @order.user_email %></li>
-      <li class="list-group-item"><%= t "orders.edit.phone" %><%= @order.user_phone %></li>
-      <li class="list-group-item"><%= t "orders.edit.address" %><%= @order.user_address %></li>
-    </ul>
-  </div>
-  <div class="col-md-9">
-    <table class="table table-striped table-responsive-md btn-table">
-      <thead>
-        <tr>
-          <th><%= t "orders.edit.id" %></th>
-          <th><%= t "orders.edit.productname" %></th>
-          <th><%= t "orders.edit.price" %></th>
-          <th><%= t "orders.edit.quantity" %></th>
-          <th><%= t "orders.edit.amount" %></th>
-        </tr>
-      </thead>
-      <tbody>
-        <%= render partial: "order_detail", collection: @order_details %>
-        <tr>
-          <th><%= t "orders.edit.totalamount" %></th>
-          <td cols="5"><%= t("product_price", price: @order.totalamount) %></td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+  <section class="panel">
+    <div class="col-md-12">
+      <%= form_for [:admin, @order] do |f| %>
+        <div class="form-group">
+          <%= f.label :status, class: "col-sm-1 control-label" %>
+          <div class="col-sm-4">
+            <%= f.select :status, options_for_select(Order.statuses.keys, @order.status), {}, {class: "form-control"} %>
+          </div>
+
+          <div class="col-sm-7">
+            <%= f.submit t(".update"), class: "btn btn-success" %>
+          </div>
+        </div>
+      <% end %>
+      <br>
+      <ul class="list-group">
+        <li class="list-group-item active"><%= t ".cus_info" %></li>
+        <li class="list-group-item"><%= t ".name" %><%= @order.user_name %></li>
+        <li class="list-group-item"><%= t ".email" %><%= @order.user_email %></li>
+        <li class="list-group-item"><%= t ".phone" %><%= @order.user_phone %></li>
+        <li class="list-group-item"><%= t "o.address" %><%= @order.user_address %></li>
+      </ul>
+      <table class="table table-striped table-responsive-md btn-table">
+        <thead>
+          <tr>
+            <th><%= t ".id" %></th>
+            <th><%= t ".productname" %></th>
+            <th><%= t ".price" %></th>
+            <th><%= t ".quantity" %></th>
+            <th><%= t ".amount" %></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render partial: "order_detail", collection: @order_details %>
+          <tr>
+            <th><%= t ".totalamount" %></th>
+            <td cols="5"><%= t("product_price", price: @order.totalamount) %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </section>
 </div>
