--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,17 +1,23 @@
 <h1><%= t "orders.index.list_order" %></h1>
-<%= will_paginate @order_items %>
-<table class="table table-striped table-responsive-md btn-table">
-  <thead>
-    <tr>
-      <th><%= t "orders.index.id" %></th>
-      <th><%= t "orders.index.username" %></th>
-      <th><%= t "orders.index.totalamount" %></th>
-      <th><%= t "orders.index.status" %></th>
-      <th></th>
-    </tr>
-  </thead>
-  <tbody>
-    <%= render partial: "order_item", collection: @order_items %>
-  </tbody>
-</table>
-<%= will_paginate @order_items %>
+<div class="row">
+  <div class="col-lg-12">
+    <section class="panel">
+      <%= will_paginate @orders %>
+      <table class="table table-striped table-responsive-md btn-table">
+        <thead>
+          <tr>
+            <th><%= t ".id" %></th>
+            <th><%= t ".username" %></th>
+            <th><%= t ".totalamount" %></th>
+            <th><%= t ".status" %></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody>
+          <%= render @orders %>
+        </tbody>
+      </table>
+      <%= will_paginate @orders %>
+    </section>
+  </div>
+</div>
