fix_comment_templates_admin

--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -3,7 +3,9 @@
   <div class="form-group">
     <%= f.label :category, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.collection_select :parent_id, @categories, :id, :long_name, {include_blank: t("admin.categories.edit.parent")}, {class: "form-control"} %>
+      <%= f.collection_select :parent_id, @categories, :id, :long_name,
+        {include_blank: t("admin.categories.edit.parent")},
+        {class: "form-control"} %>
     </div>
   </div>
   <div class="form-group">
@@ -15,13 +17,14 @@
   <div class="form-group">
     <%= f.label :catcontent, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_area(:catcontent, size: Settings.size) %>
+      <%= f.text_area :catcontent, size: Settings.size %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :status, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.select :status, options_for_select(Category.statuses.keys, @category.status), {}, {class: "form-control"} %>
+      <%= f.select :status, options_for_select(Category.statuses.keys,
+        @category.status), {}, {class: "form-control"} %>
     </div>
   </div>
   <div class="form-group">
