--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -14,8 +14,12 @@
           <span class="menu-arrow arrow_carrot-right"></span>
         <% end %>
         <ul class="sub">
-          <li><%= link_to t("layouts.admin.list_cate"), admin_categories_path %></li>
-          <li><%= link_to t("layouts.admin.add_cate"), new_admin_category_path %></li>
+          <li>
+            <%= link_to t("layouts.admin.list_cate"), admin_categories_path %>
+          </li>
+          <li>
+            <%= link_to t("layouts.admin.add_cate"), new_admin_category_path %>
+          </li>
         </ul>
       </li>
       <li class="sub-menu">
@@ -25,8 +29,12 @@
           <span class="menu-arrow arrow_carrot-right"></span>
         <% end %>
         <ul class="sub">
-          <li><%= link_to t("layouts.admin.list_product"), admin_products_path %></li>
-          <li><%= link_to t("layouts.admin.add_book"), new_admin_product_path %></li>
+          <li>
+            <%= link_to t("layouts.admin.list_product"), admin_products_path %>
+          </li>
+          <li>
+            <%= link_to t("layouts.admin.add_book"), new_admin_product_path %>
+          </li>
         </ul>
       </li>
       <li>
