--- a/app/views/admin/categories/_category.html.erb
+++ b/app/views/admin/categories/_category.html.erb
@@ -3,7 +3,10 @@
   <td><%= category.long_name %></td>
   <td><%= category.status %></td>
   <td>
-    <%= link_to t("orders.index.details"), edit_admin_category_path(category.id), method: :get, class: "btn btn-primary btn-rounded btn-sm my-0" %>
-    <%= link_to t("products.show.del"), admin_category_path(category.id), method: :delete, data: {confirm: t("products.show.sure")}, class: "btn btn-primary btn-rounded btn-sm my-0" %>
+    <%= link_to t("orders.index.details"), edit_admin_category_path(category.id),
+      method: :get, class: "btn btn-primary btn-rounded btn-sm my-0" %>
+    <%= link_to t("products.show.del"), admin_category_path(category.id),
+      method: :delete, data: {confirm: t("products.show.sure")},
+      class: "btn btn-primary btn-rounded btn-sm my-0" %>
   </td>
 </tr>
