--- a/app/views/admin/products/edit.html.erb
+++ b/app/views/admin/products/edit.html.erb
@@ -46,13 +46,14 @@
   <div class="form-group">
     <%= f.label :productcontent, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_area(:productcontent, size: Settings.size) %>
+      <%= f.text_area :productcontent, size: Settings.size %>
     </div>
    </div>
   <div class="form-group">
     <%= f.label :status, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.select :status, options_for_select(Product.statuses.keys), {}, {class: "form-control"} %>
+      <%= f.select :status, options_for_select(Product.statuses.keys), {},
+        {class: "form-control"} %>
     </div>
   </div>
   <div class="form-group">
