--- a/app/views/layouts/admin/application.html.erb
+++ b/app/views/layouts/admin/application.html.erb
@@ -12,6 +12,7 @@
       <%= render "layouts/admin/sidebar" %>
       <section id="main-content">
         <section class="wrapper">
+          <%= render "layouts/admin/flash" %>
           <%= yield %>
         </section>
         <%= render "layouts/admin/footer" %>
