--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,15 +1,9 @@
-<h1><%= t "admin.orders.index.list_product" %></h1>
+<h1><%= t "admin.users.index.list_user" %></h1>
 <div class="row">
   <section class="panel">
     <div class="col-md-6">
-      <h3><%= t "products.index.import_file" %></h3>
-      <%= form_tag import_admin_products_path, multipart: true do %>
-        <%= file_field_tag :file %>
-        <%= submit_tag t("products.index.import"), class: "btn btn-success" %>
-      <% end %>
-    </div>
       <div class="nav search-row" id="top_menu">
-        <%= form_tag admin_products_path, method: :get do %>
+        <%= form_tag admin_users_path, method: :get do %>
           <%= text_field_tag :search, params[:search], class: "form-control sinput",
             placeholder: t("layouts.admin.keyword") %>
           <%= button_tag type: "submit", class: "btn btn-default", name: nil do %>
@@ -17,27 +11,30 @@
           <% end %>
         <% end %>
       </div>
+    </div>
     <div class="col-md-6">
       <%= will_paginate @product %>
     </div>
     <table class="table table-striped table-responsive-md btn-table">
       <thead>
         <tr>
-          <th><%= t ".id" %></th>
-          <th><%= t ".productname" %></th>
-          <th><%= t ".category" %></th>
-          <th><%= t ".price" %></th>
-          <th><%= t ".status" %></th>
+          <th><%= t "admin.users.index.id" %></th>
+          <th><%= t "admin.users.index.name" %></th>
+          <th><%= t "admin.users.index.email" %></th>
+          <th><%= t "admin.users.index.gender" %></th>
+          <th><%= t "admin.users.index.address" %></th>
+          <th><%= t "admin.users.index.phone" %></th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <% if @products && @products.any? %>
-          <%= render @products %>
+        <% if @users && @users.any? %>
+          <%= render @users %>
         <% else %>
-          <% flash[:danger] = t ".not_found_products" %>
+          <% flash[:danger] = t ".not_found_users" %>
         <% end %>
       </tbody>
     </table>
+    <%= will_paginate @users %>
   </section>
 </div>
