--- a/app/views/layouts/admin/_header.html.erb
+++ b/app/views/layouts/admin/_header.html.erb
@@ -25,7 +25,7 @@
             <% end %>
           </li>
           <li>
-            <%= link_to "#" do %>
+            <%= link_to logout_path, method: :delete do %>
               <i class="icon_key_alt"></i>
               <%= t "layouts.admin.log_out" %>
             <% end %>
