--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -18,12 +18,12 @@
     <table class="table table-striped table-responsive-md btn-table">
       <thead>
         <tr>
-          <th><%= t "admin.users.index.id" %></th>
-          <th><%= t "admin.users.index.name" %></th>
-          <th><%= t "admin.users.index.email" %></th>
-          <th><%= t "admin.users.index.gender" %></th>
-          <th><%= t "admin.users.index.address" %></th>
-          <th><%= t "admin.users.index.phone" %></th>
+          <th><%= t ".id" %></th>
+          <th><%= t ".name" %></th>
+          <th><%= t ".email" %></th>
+          <th><%= t ".gender" %></th>
+          <th><%= t ".address" %></th>
+          <th><%= t ".phone" %></th>
           <th></th>
         </tr>
       </thead>
