--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,16 @@
     <%= link_to t(".book"), root_path, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        <li>
+          <%= form_tag search_path, method: :get do %>
+            <div class="input-group">
+              <%= text_field_tag :name, nil, class: "form-control", placeholder: "Keyword" %>
+              <%= button_tag type: t(".submit"), class: "btn-search", name: nil do %>
+                <%= content_tag :i, t(".search"), class: "fa fa-search" %>
+              <% end %>
+            </div>
+          <% end %>
+        </li>
         <li><%= link_to t(".home"), root_path %></li>
         <li><%= link_to t(".help"), help_path %></li>
         <li class="dropdown">
@@ -16,7 +26,6 @@
           </ul>
         </li>
         <% if logged_in? %>
-          <li><%= link_to t(".users"), users_path %></li>
           <li class="dropdown">
             <%= link_to "#", class: "dropdown-toggle", data: {toggle: :dropdown} do %><%= t(".account") %><b class="caret"></b>
             <% end %>
@@ -29,20 +38,6 @@
               </li>
             </ul>
           </li>
-          <% if current_user.admin? %>
-            <li class="dropdown">
-              <%= link_to "#", class: "dropdown-toggle", data: {toggle: :dropdown} do %>
-                <%= t ".admin" %><b class="caret"></b>
-              <% end %>
-              <ul class="dropdown-menu">
-                <li><%= link_to t(".list_order"), admin_orders_path %></li>
-                <li><%= link_to t(".list_product"), admin_products_path %></li>
-                <li><%= link_to t(".add_book"), new_admin_product_path %></li>
-                <li><%= link_to t(".list_cate"), admin_categories_path %></li>
-                <li><%= link_to t(".add_cate"), new_admin_category_path %></li>
-              </ul>
-            </li>
-          <% end %>
         <% else %>
           <li><%= link_to t(".log_in"), login_path %></li>
         <% end %>
