--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
   <body>
     <%= render "layouts/header" %>
-    <div class="container">
+    <div class="container mar-top">
     <%= render "layouts/flash" %>
       <%= yield %>
       <%= render "layouts/footer" %>
