--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -40,7 +40,7 @@
           </li>
         <% else %>
           <li><%= link_to t(".log_in"), login_path %></li>
-        <% end %>
+        <% end %>4
         <li><%= link_to t("controller.carts.cart"), your_cart_path %></li>
       </ul>
     </nav>
