--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -2,4 +2,7 @@
   <%= link_to product_path(product), class: "products" do %>
     <%= image_tag product.image.url %>
   <% end %>
+  <%= link_to product_path(product), class: "products" do %>
+    <%= product.productname %>
+  <% end %>
 </div>
